--- a/main.html
+++ b/main.html
@@ -7,8 +7,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
+    <table style="width: 100%; height: 100%" border="1">
       <!-- Your code here -->
+		<tr>
+			<td>
+				<table border="1">
+					<tr><th colspan="2">Nested Table 2</tr>
+					<tr>
+						<th>Column 1</th>
+						<th>Column 1</th>
+					</tr>
+					<tr>
+						<th>abc</th>
+						<th>def</th>
+					</tr>
+				</table>
+			</td>
+		</tr>
     </table>
   </body>
 </html>
