--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 					<tr><th colspan="2">Nested Table 2</tr>
 					<tr>
 						<th>Column 1</th>
-						<th>Column 1</th>
+						<th>Column 2</th>
 					</tr>
 					<tr>
 						<td>abc</td>
@@ -29,9 +29,9 @@
 					<tr>
 						<td>
 							<ul>
-								<li>List iteam</li>
-								<li>List iteam</li>
-								<li>List iteam</li>
+								<li>List item</li>
+								<li>List item</li>
+								<li>List item</li>
 							</ul>
 						</td>
 					</tr>
